ircv3_parse_derive/tests/ui/de/fail/duplicate_with.stderr
error: duplicate `with` attribute
 --> tests/ui/de/fail/duplicate_with.rs:6:11
  |
6 |     #[irc(with = "fn2")]
  |           ^^^^^^^^^^^^
